# rustty-discord

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20250519084902_create_tables.sql
src/: main.rs
src/db/: pool.rs
src/models/: mod.rs
src/routes/: README.md
